--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -3,6 +3,15 @@
 # supervisory qipipeline workflow.
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G'}
 
+[stage]
+plugin_args = {'qsub_args': '-l h_rt=08:00:00,mf=4G', 'overwrite': True}
+
+[bolus_arrival_index]
+plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
+
+[roi]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
 [register]
 run_without_submitting = True
 
@@ -14,9 +23,3 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
 
 [download_reg_time_series]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
-
-[roi]
-plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
-
-[bolus_arrival_index]
-plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
