--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -16,8 +16,8 @@ optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model
 [create_profile]
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
 
-[r1_series]
-plugin_args = {'qsub_args': '-l h_rt=0:00:30,mf=4G', 'overwrite': True}
+[DceToR1]
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [R1]
 r1_0_val = 0.7
