--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -16,12 +16,15 @@ optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model
 [create_profile]
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
 
+[baseline]
+plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
+
 [DceToR1]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
 [R1]
 r1_0_val = 0.7
-baseline_end_idx = 1
+base_end = 1
 r1_cr = 3.8
 r1_b_pre = 0.71
 
