--- a/qipipe/conf/staging.cfg
+++ b/qipipe/conf/staging.cfg
@@ -1,7 +1,7 @@
 [DcmStack]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
 
-[upload_dicom]
+[upload]
 plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=1G', 'overwrite': True}
 
 [fix_dicom]
