--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -10,7 +10,7 @@ plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [Fastfit]
 plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
-model_name = 'fxr.model'
+model_name = 'baldero.full'
 optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model.chisq']
 
 [create_profile]
@@ -29,6 +29,7 @@ r1_cr = 3.8
 r1_b_pre = 0.71
 
 [AIF]
+aif_model = airc
 aif_scale = 0.674
 aif_params = [0.4, 2.2, 0.23, 1.3, 0.09, 0.0013, 0.0]
 aif_delta_t = 1.5
