--- a/qipipe/conf/modeling.cfg
+++ b/qipipe/conf/modeling.cfg
@@ -9,9 +9,9 @@
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G'}
 
 [Fastfit]
-plugin_args = {'qsub_args': '-pe mpi 24-48 -l h_rt=08:00:00,mf=750M,h_vmem=2G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe mpi 12-24 -l h_rt=48:00:00,mf=500M,h_vmem=4G', 'overwrite': True}
 model_name = 'baldero.full'
-optional_outs = ['chisq', 'guess_model.k_trans', 'guess_model.v_e', 'guess_model.chisq']
+optional_outs = ['chisq', 'ext_tofts.k_trans', 'ext_tofts.v_e', 'ext_tofts.chisq']
 
 [create_profile]
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=1G', 'overwrite': True}
