--- a/qipipe/conf/staging.cfg
+++ b/qipipe/conf/staging.cfg
@@ -1,8 +1,11 @@
 [DcmStack]
 plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G', 'overwrite': True}
 
+[merge_volumes]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
 [upload]
-plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=1G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=4G', 'overwrite': True}
 
 [fix_dicom]
 run_without_submitting = True
