--- a/qipipe/conf/staging.cfg
+++ b/qipipe/conf/staging.cfg
@@ -1,11 +1,5 @@
-[DcmStack]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=1G', 'overwrite': True}
-
-[merge_volumes]
+[stage_volume]
 plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
-
-[upload]
-plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=4G', 'overwrite': True}
 
 [fix_dicom]
 run_without_submitting = True
@@ -13,8 +7,14 @@ run_without_submitting = True
 [collect_scan_dicom]
 run_without_submitting = True
 
-[volume_format]
+[DcmStack]
 run_without_submitting = True
 
-[collect_vol_dicom]
+[merge_volumes]
+plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
+
+[upload]
+plugin_args = {'qsub_args': '-l h_rt=02:00:00,mf=4G', 'overwrite': True}
+
+[volume_format]
 run_without_submitting = True
