--- a/qipipe/conf/staging.cfg
+++ b/qipipe/conf/staging.cfg
@@ -10,7 +10,7 @@ run_without_submitting = True
 [DcmStack]
 run_without_submitting = True
 
-[merge_volumes]
+[merge]
 plugin_args = {'qsub_args': '-l h_rt=01:00:00,mf=4G', 'overwrite': True}
 
 [upload]
