--- a/qipipe/conf/qipipeline.cfg
+++ b/qipipe/conf/qipipeline.cfg
@@ -41,8 +41,5 @@ run_without_submitting = True
 [model]
 run_without_submitting = True
 
-[bolus_arrival_index]
+[bolus_arrival]
 plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=16G', 'overwrite': True}
-
-[download_reg_time_series]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=4G', 'overwrite': True}
