--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -56,7 +56,7 @@ output_affine_transform = initial_xform.mat
 #
 # * The Nipype antsRegistrationBuildTemplate example
 ##
-plugin_args = {'qsub_args': '-pe smp 8-12 -l h_rt=08:00:00,mf=500M,h_vmem=2G', 'overwrite': True}
+plugin_args = {'qsub_args': '-pe smp 4-12 -l h_rt=08:00:00,mf=1G,h_vmem=4G', 'overwrite': True}
 num_threads = 4
 float = False
 transforms = [Rigid, Affine, SyN]
