--- a/qipipe/conf/registration.cfg
+++ b/qipipe/conf/registration.cfg
@@ -7,9 +7,9 @@ run_without_submitting = True
 [create_profile]
 plugin_args = {'qsub_args': '-l h_rt=00:05:00,mf=100M', 'overwrite': True}
 
-# The registration time series merge requires beaucoup memory.
+# The registration time series merge requires extra memory.
 [merge_volumes]
-plugin_args = {'qsub_args': '-l h_rt=00:30:00,mf=16G', 'overwrite': True}
+plugin_args = {'qsub_args': '-l h_rt=00:10:00,mf=4G', 'overwrite': True}
 
 # Upload takes a while, but not as long as the scan upload,
 # since there are no DICOM files.
